<resources>
    <string name="app_name">Asistent Slivko</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Uporabnik</string>
    <string name="home">Domov</string>
    <string name="itm" translatable="false">ITM</string>
    <string name="doziranje">Doziranje</string>
    <string name="pomoc">Pomoč</string>

    <string name="fragment_home_String">Home fragment</string>
    <string name="fragment_itm_String">Itm fragment</string>
    <string name="fragment_doz_String">Doziranje fragment</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="description_jernej">Jernej Habjan</string>
    <string name="izracunaj_itt">Izračunaj ITT</string>
    <string name="ime_home">Ime</string>
    <string name="priimek_home">Priimek</string>
    <string name="spol">Spol</string>
    <string name="te_a">Teža</string>
    <string name="spol_zenska">Ženska</string>
    <string name="spol_moski">Moški</string>
    <string name="avtor_string">Fakulteta za Računalništvo in Informatiko\nElektronsko in mobilno poslovanje\nSeminarska naloga\n2017/2018</string>
    <string name="teza">Teža</string>
    <string name="izracunajte_itm">Izračunajte ITM</string>
    <string name="itm_tezaField">Vnesite težo</string>
    <string name="asistent_slivko">Asistent Slivko</string>
    <string name="pomo_nik_pri_zdravni_kih_pregledih">pomočnik pri zdravniških pregledih</string>
    <string name="slivko_logo">Slivko logo</string>
    <string name="home_vnesite_ime">Vnesite ime</string>
    <string name="home_vnesite_priimek">Vnesite priimek</string>
    <string name="oznaka_teze">Oznaka teže</string>
    <string name="kilogrami">Kilogrami</string>
    <string name="pound">Pound</string>
    <string name="feet">Feet</string>
    <string name="centimetri">Centimetri</string>
    <string name="oznaka_vi_ine">Oznaka višine</string>
    <string name="home_vnesite_tezo">Vnesite težo</string>
    <string name="neizbrano">Neizbrano</string>
    <string name="vsina">Višina</string>
    <string name="vnesite_telesno_visino">Vnesite telesno višino</string>
    <string name="telesna_visina">Telesna višina</string>
    <string name="telesna_teza">Telesna teža</string>
    <string name="idealna_telesna_te_a">Idealna telesna teža</string>
    <string name="indeks_telesne_mase">Indeks telesne mase</string>
    <string name="izracunaj_itm">Izračunaj ITM</string>


    <string-array name="mesta_array">
        <item>Gabrška gora</item>
        <item>Žiri</item>
        <item>Gorenja vas</item>
        <item>Log nad Škofjo Loko</item>
        <item>Žetina</item>
        <item>Brode</item>
        <item>Zminec</item>
        <item>Rovte</item>
        <item>Dolenčice</item>
        <item>Javorje</item>
    </string-array>

    <string-array name="razredi_array">
        <item>Prvi</item>
        <item>Poslovni</item>
        <item>Ekonomski</item>
    </string-array>






    <string name="title_text">Prijava z\nGoogle Računom</string>
    <!-- Sign-in status messages -->
    <string name="signed_in_fmt">Prijavljeni ste kot:</string>
    <string name="signed_in">Prijavljen</string>
    <string name="signing_in">Prijavljam se…</string>
    <string name="signed_out">Odjavljen</string>
    <string name="signed_in_err">"Napaka pri prijavi."</string>
    <string name="error_null_person">
        Error: Plus.PeopleApi.getCurrentPerson returned null. Ensure that the Google+ API is
        enabled for your project, you have a properly configured google-services.json file
        and that your device has an internet connection.
    </string>
    <string name="loading">Nalagam…</string>
    <string name="auth_code_fmt">Auth Code: %s</string>
    <string name="id_token_fmt">ID Token: %s</string>

    <!-- Google Play Services error for Toast -->
    <string name="play_services_error_fmt">Napak z Google Play Services: %i</string>

    <!-- Button labels -->
    <string name="sign_out">Odjavi se</string>
    <string name="save_username">Shrani ime</string>
    <string name="refresh_token">Pridobi svež žeton</string>

    <!-- Content Description for images -->
    <string name="desc_google_icon">Google Logo</string>

    <!-- Rationale for asking for Contacts -->
    <string name="contacts_permission_rationale">Contacts access is needed in order to retrieve your email address.</string>

    <!-- Activity Names and Descriptions -->
    <string name="name_sign_in_activity">SignInActivity</string>
    <string name="desc_sign_in_activity">Signing in, signing out, and revoking access.</string>
    <string name="desc_sign_in_activity_scopes">Signing in, signing out, and revoking access with Google Drive permissions.</string>

    <string name="name_id_token_activity">IdTokenActivity</string>
    <string name="desc_id_token_activity">Retrieving an ID Token for the user.</string>

    <string name="desc_auth_code_activity">Demonstrate retrieving an auth code for authorizing your server.</string>
    <string name="name_auth_code_activity">ServerAuthCodeActivity</string>

    <string name="desc_rest_activity">Demonstrate using Google Sign In with a Google REST API</string>
    <string name="name_rest_activity">RestApiActivity</string>

    <!-- Messages for the Rest API activity -->
    <string name="connections_fmt">Connections: %1$s</string>
    <string name="msg_contacts_failed">Get contacts failed.</string>

    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <string name="server_client_id">331110486379-v66cp8p5ghuu1a6cj5krbuigh316t5gt.apps.googleusercontent.com	</string>


</resources>
